--- a/app/templates/account/account_edit.html
+++ b/app/templates/account/account_edit.html
@@ -33,6 +33,10 @@
           <form method="post">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <div class="form-group">
+              <label for="email">Email</label>
+              <input id="email" name="email" type="email" class="form-control" required value="{{ user.email }}">
+            </div>
+            <div class="form-group">
               <label for="full_name">Full Name</label>
               <input id="full_name" name="full_name" type="text" class="form-control" required value="{{ user.full_name }}">
             </div>
