--- a/app/templates/account/account.html
+++ b/app/templates/account/account.html
@@ -41,6 +41,10 @@
                 Purchase history
                 <i class="fa fa-chevron-right small"></i>
               </a>
+              <a class="list-group-item list-group-item-action d-flex justify-content-between align-items-center" href="{{ url_for('account.my_reviews') }}">
+                My reviews
+                <i class="fa fa-chevron-right small"></i>
+              </a>
               <a class="list-group-item list-group-item-action d-flex justify-content-between align-items-center" href="{{ url_for('users.users_search') }}">
                 Find other users
                 <i class="fa fa-chevron-right small"></i>
