--- a/app/templates/product_detail.html
+++ b/app/templates/product_detail.html
@@ -6,7 +6,7 @@
 ```
 <!-- IMAGE -->
 <div class="col-md-4">
-    <img src="hhttps://www.theendlessmeal.com/wp-content/uploads/2025/06/vanilla-ice-cream-recipe-3-500x500.jpg" alt="Vanilla Ice Cream">
+    <img src="https://www.theendlessmeal.com/wp-content/uploads/2025/06/vanilla-ice-cream-recipe-3-500x500.jpg" alt="Vanilla Ice Cream">
 </div>
 
 <!-- DETAILS -->
